charts/argocd/helm.yaml
---
# Source: argo-cd/templates/argocd-application-controller/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
  name: argo-cd-argocd-application-controller-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8082
    targetPort: controller
  selector:
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-application-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-application-controller
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
spec:
  ports:
  - name: https-controller
    port: 8082
    targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-applicationset/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
  name: argo-cd-argocd-applicationset-controller-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8085
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-applicationset/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-applicationset-controller
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
spec:
  ports:
  - name: webhook
    port: 7000
    targetPort: 
  selector:
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-repo-server/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-repo-server-metrics
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
  name: argo-cd-argocd-repo-server-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8084
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-repo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
  name: argo-cd-argocd-repo-server
spec:
  ports:
  - name: https-repo-server
    protocol: TCP
    port: 8081
    targetPort: repo-server
  selector:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-server/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-server-metrics
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
  name: argo-cd-argocd-server-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8083
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-server
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: server
  - name: https
    protocol: TCP
    port: 443
    targetPort: server
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/redis/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-redis-metrics
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      protocol: TCP
      port: 9121
      targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: redis
  type: ClusterIP
---
# Source: argo-cd/templates/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-redis
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-applicationset/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-applicationset-controller
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
    app.kubernetes.io/version: "v0.4.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
      app.kubernetes.io/instance: argo-cd
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-4.2.2
        app.kubernetes.io/name: argocd-applicationset-controller
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: applicationset-controller
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app: argo-cd
        app.kubernetes.io/version: "v0.4.1"
    spec:
      serviceAccountName: argo-cd-argocd-applicationset-controller
      securityContext:
        fsGroup: 2000
      containers:
        - name: applicationset-controller
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          command:
            - applicationset-controller
            - --metrics-addr=:8080
            - --probe-addr=:8081
            - --namespace=deploy
            - --argocd-repo-server=argo-cd-argocd-repo-server:8081
            - --policy=sync
            - --debug=false
            - --dry-run=false
          image: quay.io/argoproj/argocd-applicationset:v0.4.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
            - name: metrics
              containerPort: 8080
              protocol: TCP
            - name: webhook
              containerPort: 7000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /tmp
              name: tmp-dir
            - mountPath: /app/config/ssh
              name: ssh-known-hosts
            - mountPath: /app/config/tls
              name: tls-certs
            - mountPath: /app/config/gpg/source
              name: gpg-keys
            - mountPath: /app/config/gpg/keys
              name: gpg-keyring
      volumes:
      - emptyDir: {}
        name: tmp-dir
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - configMap:
          name: argocd-gpg-keys-cm
        name: gpg-keys
      - emptyDir: {}
        name: gpg-keyring
---
# Source: argo-cd/templates/argocd-repo-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-repo-server
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
    app.kubernetes.io/version: "v2.3.2"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
      app.kubernetes.io/instance: argo-cd
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-4.2.2
        app.kubernetes.io/name: argocd-repo-server
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: repo-server
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app: argo-cd
        app.kubernetes.io/version: "v2.3.2"
    spec:
      securityContext:
        fsGroup: 999
        runAsGroup: 999
        runAsUser: 999
      containers:
      - name: repo-server
        image: quay.io/argoproj/argocd:v2.3.2
        imagePullPolicy: IfNotPresent
        command:
        - entrypoint.sh
        args:
        - argocd-repo-server
        - --redis
        - argo-cd-argocd-redis:6379
        - --logformat
        - json
        - --loglevel
        - warn
        volumeMounts:
        - mountPath: /app/config/gpg/source
          name: gpg-keys
        - mountPath: /app/config/gpg/keys
          name: gpg-keyring
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/reposerver/tls
          name: argocd-repo-server-tls
        - mountPath: /tmp
          name: tmp-dir
        - mountPath: /helm-working-dir
          name: helm-working-dir
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
        ports:
        - name: repo-server
          containerPort: 8081
          protocol: TCP
        
        - name: metrics
          containerPort: 8084
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
      serviceAccountName: argo-cd-argocd-repo-server
      volumes:
      - name: gpg-keys
        configMap:
          name: argocd-gpg-keys-cm
      - emptyDir: {}
        name: gpg-keyring
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - name: helm-working-dir
        emptyDir: {}
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - emptyDir: {}
        name: tmp-dir
      - emptyDir: {}
        name: var-files
      - emptyDir: {}
        name: plugins
---
# Source: argo-cd/templates/argocd-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-server
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
    app.kubernetes.io/version: "v2.3.2"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argo-cd
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-4.2.2
        app.kubernetes.io/name: argocd-server
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: server
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app: argo-cd
        app.kubernetes.io/version: "v2.3.2"
    spec:
      securityContext:
        fsGroup: 999
        runAsGroup: 999
        runAsUser: 999
      containers:
      - name: server
        image: quay.io/argoproj/argocd:v2.3.2
        imagePullPolicy: IfNotPresent
        command:
        - argocd-server
        
        - --staticassets
        - /shared/app
        
        - --repo-server
        - argo-cd-argocd-repo-server:8081
        - --logformat
        - json
        - --loglevel
        - warn
        - --redis
        - argo-cd-argocd-redis:6379
        - --insecure
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/server/tls
          name: argocd-repo-server-tls
        - mountPath: /home/argocd
          name: plugins-home
        - mountPath: /tmp
          name: tmp-dir
        ports:
        - name: server
          containerPort: 8080
          protocol: TCP
        
        - name: metrics
          containerPort: 8083
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      serviceAccountName: argocd-server
      volumes:
      - emptyDir: {}
        name: static-files
      - emptyDir: {}
        name: tmp-dir
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - emptyDir: {}
        name: plugins-home
---
# Source: argo-cd/templates/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-redis
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
    app.kubernetes.io/version: "6.2.6-alpine"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-4.2.2
        app.kubernetes.io/name: argocd-redis
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: redis
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app: argo-cd
        app.kubernetes.io/version: "6.2.6-alpine"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: default
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
      containers:
      - name: argo-cd-argocd-redis
        args:
        - --save
        - ""
        - --appendonly
        - "no"
        image: redis:6.2.6-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      - name: metrics
        image: quay.io/bitnami/redis-exporter:1.26.0-debian-10-r2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9121
          name: metrics
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
---
# Source: argo-cd/templates/argocd-application-controller/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argo-cd-argocd-application-controller
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
    app.kubernetes.io/version: "v2.3.2"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
      app.kubernetes.io/instance: argo-cd
  serviceName: argo-cd-argocd-application-controller
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-4.2.2
        app.kubernetes.io/name: argocd-application-controller
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: application-controller
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app: argo-cd
        app.kubernetes.io/version: "v2.3.2"
    spec:
      securityContext:
        fsGroup: 999
        runAsGroup: 999
        runAsUser: 999
      containers:
      - command:
        - argocd-application-controller
        - --status-processors
        - "20"
        - --operation-processors
        - "10"
        - --app-resync
        - "180"
        - --self-heal-timeout-seconds
        - "5"
        - --repo-server
        - argo-cd-argocd-repo-server:8081
        - --repo-server-timeout-seconds
        - "60"
        - --logformat
        - json
        - --loglevel
        - warn
        - --redis
        - argo-cd-argocd-redis:6379
        image: quay.io/argoproj/argocd:v2.3.2
        imagePullPolicy: IfNotPresent
        name: application-controller
        securityContext:
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        ports:
        - name: controller
          containerPort: 8082
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        workingDir: /home/argocd
        volumeMounts:
        - name: argocd-home
          mountPath: /home/argocd
        - mountPath: /app/config/controller/tls
          name: argocd-repo-server-tls
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
      serviceAccountName: argocd-application-controller
      volumes:
      - emptyDir: {}
        name: argocd-home
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
---
# Source: argo-cd/templates/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-argocd-server
  labels:
    helm.sh/chart: argo-cd-4.2.2
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app: argo-cd
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.arktos-consulting.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
